[tool.poetry]
name = "tz-calc"
version = "0.1.0"
description = ""
authors = ["srwareham <srwareham@hotmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
